# trail

./: .env  .env.example  .gitignore  README.md  get-dictionary.ts  i18n-config.ts  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts
.github/workflows/: vercel.yml
app/: content.ts  globals.css  layout.tsx  loading.tsx  page.tsx  robots.ts  sitemap.ts
app/[lang]/: layout.tsx  page.tsx
app/[lang]/about/: AboutClient.tsx  page.tsx
app/[lang]/admin/: AdminDashboardCleint.tsx  AdminSidebar.tsx  page.tsx  (+1 more)
app/about/: page.tsx
app/admin/: AdminSidebar.tsx
app/blog/: BlogList.tsx  page.tsx
app/book-now/: page.tsx
app/components/: AppInitializer.tsx  CustomTripForm.tsx  FAQ.tsx  FeaturedTrips.tsx  FeaturedTripsWrapper.tsx  Footer.tsx  Hero.tsx  HeroSection.tsx  HeroWrapper.tsx  LanguageTogge.tsx  MobileBottomNav.tsx  MobileBottomNavNoSSR.tsx  Navbar.tsx  SnowEffect.tsx  StickyBookNav.tsx  TopDestinations.tsx  TripReviews.tsx  WhyChooseUs.tsx
app/contact/: page.tsx
app/context/: LanguageContext.tsx  UserContext.tsx
app/dashboard/: DashboardClient.tsx  page.tsx
app/sign-in/: page.tsx
app/sign-up/: page.tsx
app/sso-callback/: page.tsx
app/tours/: loading.tsx
app/utils/: currency.ts
dictionaries/: de.json  en.json  ko.json  mn.json
docs/content-guidelines/: AiContentTemplate.md
lib/: rust-api.ts
lib/models/: User.ts
lib/mongo/: blog.ts  bookings.ts  departures.ts  destinations.ts  seed-blog.ts  seed.ts  trips.ts
public/: site.webmanifest
rust-service/: Cargo.toml
rust-service/src/: main.rs  models.rs
(+69 files in other folders)
